# vedro-xunit-reporter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_xunit_reporter.py  vedro.cfg.py  vedro_xunit_reporter  xunit_report.xml
tests/contexts/: __init__.py  fired_reported_event.py  fired_startup_event.py  registered_plugin.py
tests/helpers/: __init__.py  create_exc_info.py  create_report.py  create_scenario_result.py  create_testsuite.py  parse_report_xml.py
tests/scenarios/: generate_xunit_report.py
vedro_xunit_reporter/: xunit_reporter.py
